# DealershipIntelligence

./: .gitignore  Dockerfile.api  Dockerfile.dashboard  docker-compose.yml  main.py  pyproject.toml
.trash/20260117_005754/docs/templates/: final_report_template.md  model_card_template.md
app/api/: main.py
app/dashboard/: app.py
data/: README.md
docs/: README.md  data_dictionary.md  data_quality_plan.md  modeling_overview.md  privacy_and_pii.md  project_standards.md  runbook.md
docs/_drafts/: api_spec.md  dashboard_spec.md  data_contract.md  data_model.md  forecasting_spec.md  kpi_spec.md  pricing_model_spec.md  salesperson_fairness.md
docs/internal/: screenshot_checklist.md
scripts/: init_repo.sh  simp.sh
