[project]
name = "dealership-revenue-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.3",
    "fastapi>=0.128.0",
    "lightgbm>=4.6.0",
    "mlflow>=3.8.1",
    "mypy>=1.19.1",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
