[project]
name = "dealership-revenue-intelligence"
version = "0.1.0"
description = "End-to-end dealership revenue intelligence: SQL data model + dashboard + forecasting + pricing anomalies + API"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    # Core data + modeling
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "lightgbm>=4.6.0",
    "shap>=0.49.1",

    # API + dashboard
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "streamlit>=1.52.2",
    "plotly>=6.5.0",

    # Postgres (system of record)
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
# Development quality-of-life (recommended during build)
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
]

# Optional: local analytics acceleration / dev mode
local = [
    "duckdb>=1.4.3",
    "polars>=1.36.1",
]

# Optional: experiment tracking (add only if you wire it)
mlops = [
    "mlflow>=3.8.1",
]

# Optional: hyperparameter tuning (add only if you truly use it)
tuning = [
    "optuna>=4.6.0",
]
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
